# quic-dns

./: Cargo.toml  Cross.toml  LICENSE
.github/workflows/: rust.yml
src/: main.rs
src/buffer/: mod.rs  pooled_buf_mut.rs  sliced_buffer.rs
src/listener/: tcp.rs  udp.rs
src/resolver/: mod.rs  quic.rs
