[package]
name = "quic-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = { git = "https://github.com/arontsang/compio.git", rev = "1a7337f",  default-features = false, features = ["runtime"]}
cyper = { version ="0.7.1",default-features = false , features = ["http3", "rustls"] }
bytes = "1.11.0"
async-executor = "1.13.3"
rustop = "1.1.4"
zeropool = "0.3.1"


[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
strip = true